# berry-weather

./: config.yml  pyproject.toml
cicd/: git-auto-deploy.conf.json  update-weather-station.sh
station/: __init__.py  __main__.py  config.py
station/gpio/: __init__.py  setup.py
station/sensors/: __init__.py  bme680.py  system.py  temperature.py  wifi.py
station/templates/: index.html
