[tool.poetry]
name = "berry-weather"
version = "0.1.0"
description = "RaspberryPi Weather Station"
authors = ["Bentley Hensel <bentleyhensel@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
packages = [
    { include = "station" }
]

[tool.poetry.dependencies]
python = ">=3.10"
flask = ">=3.1.0,<4.0.0"
pyyaml = ">=6.0.2,<7.0.0"

[tool.poetry.scripts]
station = "station.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
